possible fix for #41 cleanups indicated by IntelliJ